Fix status dropdown not showing in tabletable

--- a/src/components/loginpage/loginPage.css
+++ b/src/components/loginpage/loginPage.css
@@ -79,8 +79,3 @@
 .toggle-link:hover {
   text-decoration: underline;
 }
-
-.error {
-  color: red;
-  margin-top: 10px;
-}
