--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -39,12 +39,13 @@
   position: relative;
   display: inline-block;
 }
+
 .dropdown {
-  position: absolute;
+  position: fixed;  /* Changed from absolute to fixed */
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  z-index: 1;
+  z-index: 9999;  /* Increased z-index to make sure dropdown is on top */
   width: 120px;
   opacity: 0;
   transform: scale(0.95);
@@ -130,6 +131,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .tab-dropdown-container {
   display: none;
   margin-bottom: 15px;
@@ -188,7 +190,6 @@
   }
 }
 
-
 @media (max-width: 767px) {
   .booking-table th:nth-child(6),  /* Actions */
   .booking-table th:nth-child(7),  /* Note */
@@ -210,11 +211,13 @@
     font-size: 14px;
     padding: 5px;
   }
+
   .tab-item {
     padding: 8px 10px;
     font-size: 14px;
   }
 }
+
 @media (max-width: 1000px) {
   .tabs {
     display: none;
